--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://tanhatasfia.github.io/lkl ",
+  "homepage": "https://tanhatasfia.github.io/lkl ",
   "name": "simple-app",
   "version": "0.1.0",
   "private": true,
