--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://tanhatasfia.github.io/lkl ",
+  "homepage": "https://tanhatasfia.github.io/react-app-2 ",
   "name": "simple-app",
   "version": "0.1.0",
   "private": true,
@@ -14,10 +14,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
-
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
